--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Open package.json",
   "description": "Open package.json, no more, no less",
   "publisher": "tenjojeremy",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "engines": {
     "vscode": "^1.55.0"
   },
@@ -11,11 +11,11 @@
     "Other"
   ],
   "keywords": [
-    "generator",
-    "component",
-    "react",
-    "vue",
-    "template"
+    "open",
+    "package.json",
+    "package",
+    "json",
+    "shortcut"
   ],
   "activationEvents": [
     "onCommand:openPackageJson.openPackageJson"
